--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,7 +97,8 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "Wrong Subtraction.C": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled",
 }
