日常更新 - 計算機技術( 歷屆 ) 題目更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -98,7 +98,8 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "stdio.h": "c",
-        "Wrong Subtraction.C": "cpp"
+        "Wrong Subtraction.C": "cpp",
+        "stdlib.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
 }
