--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,105 +1,22 @@
 {
     "files.associations": {
-        "main,py": "python",
-        "iosfwd": "cpp",
-        "ostream": "cpp",
+        "stdlib.h": "c",
         "iostream": "cpp",
+        "ostream": "cpp",
+        "iosfwd": "cpp",
         "*.tcc": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "string_view": "cpp",
-        "cmath": "cpp",
         "iomanip": "cpp",
-        "numeric": "cpp",
-        "chrono": "cpp",
-        "limits": "cpp",
-        "valarray": "cpp",
-        "array": "cpp",
-        "atomic": "cpp",
-        "bitset": "cpp",
-        "cctype": "cpp",
-        "cfenv": "cpp",
-        "cinttypes": "cpp",
-        "clocale": "cpp",
-        "codecvt": "cpp",
-        "complex": "cpp",
-        "condition_variable": "cpp",
-        "csetjmp": "cpp",
-        "csignal": "cpp",
-        "cstdarg": "cpp",
-        "cstddef": "cpp",
-        "cstdint": "cpp",
-        "cstdio": "cpp",
-        "cstdlib": "cpp",
-        "cstring": "cpp",
-        "ctime": "cpp",
-        "cuchar": "cpp",
-        "cwchar": "cpp",
-        "cwctype": "cpp",
-        "deque": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "vector": "cpp",
-        "exception": "cpp",
-        "algorithm": "cpp",
-        "functional": "cpp",
-        "iterator": "cpp",
-        "map": "cpp",
-        "memory": "cpp",
-        "memory_resource": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
-        "ratio": "cpp",
-        "regex": "cpp",
-        "set": "cpp",
-        "string": "cpp",
-        "system_error": "cpp",
-        "tuple": "cpp",
-        "type_traits": "cpp",
-        "utility": "cpp",
-        "fstream": "cpp",
-        "future": "cpp",
-        "initializer_list": "cpp",
-        "istream": "cpp",
-        "mutex": "cpp",
-        "new": "cpp",
-        "scoped_allocator": "cpp",
-        "shared_mutex": "cpp",
-        "sstream": "cpp",
-        "stdexcept": "cpp",
-        "streambuf": "cpp",
-        "thread": "cpp",
-        "typeindex": "cpp",
-        "typeinfo": "cpp",
-        "bit": "cpp",
-        "charconv": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "format": "cpp",
-        "ios": "cpp",
-        "locale": "cpp",
-        "queue": "cpp",
-        "stack": "cpp",
-        "stop_token": "cpp",
-        "xfacet": "cpp",
-        "xhash": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xstddef": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
-        "stdio.h": "c",
-        "Wrong Subtraction.C": "cpp",
-        "stdlib.h": "c"
+        "cmath": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled",
+    "terminal.integrated.profiles.windows": {
+        "Command Prompt UTF-8": {
+            "path": "C:\\Windows\\System32\\cmd.exe",
+            "args": ["/K", "chcp 65001"]
+        }
+    },
+    "terminal.integrated.defaultProfile.windows": "Command Prompt UTF-8"
 }
