--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "iomanip": "cpp",
         "cmath": "cpp",
         "chrono": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "terminal.integrated.profiles.windows": {
