日常更新 - 因為課程小更動了一下幾個檔案

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,49 +2,25 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug C (UTF-8)",
+            "name": "Debug C/C++",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
             "args": [],
-            "cwd": "${workspaceFolder}",
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
             "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
+            "preLaunchTask": "build C/C++", // 統一使用這個建置工作
             "setupCommands": [
-                { "description": "Enable pretty-printing for gdb", "text": "-enable-pretty-printing", "ignoreFailures": true }
-            ],
-            "preLaunchTask": "Build C (UTF-8)"
-        },
-        {
-            "name": "Debug C++ (UTF-8)",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
-            "setupCommands": [
-                { "description": "Enable pretty-printing for gdb", "text": "-enable-pretty-printing", "ignoreFailures": true }
-            ],
-            "preLaunchTask": "Build C++ (UTF-8)"
-        },
-        {
-            "name": "Debug C (Big5/CP950)",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:\\MinGW\\bin\\gdb.exe",
-            "setupCommands": [
-                { "description": "Enable pretty-printing for gdb", "text": "-enable-pretty-printing", "ignoreFailures": true }
-            ],
-            "preLaunchTask": "Build C (Big5/CP950)"
+                {
+                    "description": "為 gdb 啟用整齊印出",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
